--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-confirm-box": "^1.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-if": "^4.1.4",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
